--- a/portal/templates/patient_profile.html
+++ b/portal/templates/patient_profile.html
@@ -219,7 +219,8 @@
 
                 <p id="saveMsg" class="text-muted text-center bg-warning" style="display: none"><small>You've updated your profile. Click the "Save" button to submit your changes. Or <a href="">cancel</a>.</small></p>
                 <p id="errorMsg" class="text-muted text-center bg-danger" style="display: none"><small>Oops, looks like there's a problem with your profile. Please correct it before saving.</small></p>
-                <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary">Save</button> <span id="confirmMsg" class="text-muted tnth-hide smaller-text">&nbsp;&nbsp;<em>Saved</em></span>
+                <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary">Save</button>
+                <span id="confirmMsg" class="text-muted tnth-hide small-text">&nbsp;&nbsp;<em>Profile changes have been saved</em></span>
 
             </div>
 
@@ -277,6 +278,8 @@
 
 
     </form>
+    <br />
+    {{ back_btn('patients','Patients List') }}
 
 </div>
 
@@ -312,6 +315,7 @@ $(document).ready(function(){
     $("#updateProfile").on("click", function(event){
         event.preventDefault()
         assembleContent.demo({{ patient.id }},true);
+        $("#confirmMsg").fadeIn();
     });
 
 });
