--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -8,6 +8,18 @@
 /**
  * = Colors =
  **/
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
 body {
   margin: 0;
   background-color: #FFF;
@@ -15,6 +27,29 @@ body {
   color: #333;
   font-size: 18px;
 }
+
+#mainHolder {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  filter: alpha(opacity=0);
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  opacity: 0;
+  -webkit-transition: visibility 0.5s, opacity 0.3s ease-in;
+  transition: visibility 0.5s, opacity 0.3s ease-in;
+}
+
+/** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
+#mainNav {
+  height: 71px;
+}
+#tnthNavWrapper {
+  display: none;
+  visibility: hidden;
+  -webkit-transition: visibility 0.5s ease-in;
+  transition: visibility 0.5s ease-in;
+}
+
 a {
   color: #57675B;
 }
@@ -22,31 +57,31 @@ a:hover,
 a:active {
   color: #2a4531;
 }
+a.btn{
+  cursor: pointer;
+}
 .tnth-hide {
   display: none;
 }
-.btn {
-  font-size: 18px;
-}
 .tnth-headline {
   margin: 30px 0 20px;
-  font-size: 24px;
+  font-size: 1.25em;
 }
 .tnth-subhead {
-  font-size: 22px;
+  font-size: 1.20em;
 }
 .smaller-text {
-  font-size: 14px;
+  font-size: 0.85em;
 }
 .smaller-text .form-control {
-  font-size: 14px;
-  height: 28px;
+  font-size: 0.85em;
+  height: 1.7em;
 }
 .smaller-text .btn {
-  font-size: 14px;
+  font-size: 0.85em;
 }
-.small-text {
-  font-size: 16.8px;
+.loading {
+  opacity: 0.3;
 }
 .admin-table .search .form-control {
   height: 34px;
@@ -180,11 +215,45 @@ a:active {
 .tnth-splash #wellContent {
   width: 100%;
 }
+.btn {
+  font-size: 1em;
+}
 .btn-set {
   margin-bottom: 1.5em;
 }
 .btn-set .btn {
   margin-bottom: 0.5em;
+}
+.btn-tnth-primary {
+  color: #fff;
+  background-color: #79815D;
+  border-color: #79815D;
+  transition: all 0.3s ease-in-out 0s;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  cursor:pointer;
+}
+.btn-tnth-primary:hover,
+.btn-tnth-primary:focus,
+.btn-tnth-primary.active,
+.open > .dropdown-toggle.btn-tnth-primary {
+  color: #fff;
+  background-color: #2a4531;
+  border-color: #1c2f21;
+  cursor:pointer;
+}
+.btn-tnth-primary.disabled {
+  opacity: 0.65;
+  cursor: not-allowed;
+}
+.btn-tnth-primary.disabled:hover {
+  color: #fff;
+  background-color: #79815D;
+  border-color: #79815D;
+  text-decoration:none;
+}
+.btn-tnth-back {
+  color: #777;
+  padding: 0 5px 0 0;
 }
 .form-control {
   font-size: 18px;
@@ -198,11 +267,11 @@ a:active {
 }
 .profile-img {
   float: right;
-  margin-top: -70px;
+  margin-top: -64px;
 }
 .profile-img img {
-  width: 90px;
-  border-radius: 45px;
+  width: 60px;
+  border-radius: 60px;
 }
 .portal-item {
   margin: 2em 0 3em;
@@ -241,37 +310,7 @@ a:active {
   border-top: 1px solid #ccc;
   padding-top: 1em;
 }
-.btn-tnth-primary {
-  color: #fff;
-  background-color: #79815D;
-  border-color: #79815D;
-  transition: all 0.3s ease-in-out 0s;
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  cursor:pointer;
-}
-.btn-tnth-primary:hover,
-.btn-tnth-primary:focus,
-.btn-tnth-primary.active,
-.open > .dropdown-toggle.btn-tnth-primary {
-  color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
-  cursor:pointer;
-}
-.btn-tnth-primary.disabled {
-  opacity: 0.65;
-  cursor: not-allowed;
-}
-.btn-tnth-primary.disabled:hover {
-  color: #fff;
-  background-color: #79815D;
-  border-color: #79815D;
-  text-decoration:none;
-}
-.btn-tnth-back {
-  color: #777;
-  padding: 0 5px 0 0;
-}
+
 .separator-horizontal,
 .separator-vertical {
   position: relative;
@@ -346,41 +385,437 @@ a:active {
   top: -24px;
   left: 0;
 }
-/** styles specific to profile **/
-.loading-indicator {
+
+.profile-item-container {
+  background-color: #EFF5F3;
+  background-color: rgba(173, 193, 197, 0.16);
+  padding: 1.5em 2em;
+  border-radius: 8px;
+  margin: 0.5em auto;
+  border: 1px solid #E0E6E3;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  padding: 1em;
+}
+
+.profile-item-title {
+  color: #575F5C;
+  margin-bottom: 18px;
+}
+.profile-name-label {
+  margin-bottom: 2px;
+}
+
+#userEthnicity label {
+  margin-bottom: 0;
+}
+#userRace label {
+  margin-bottom: 0;
+}
+#genderLabel {
+  margin-bottom: 0;
+}
+#userOrgs {
+  font-size: 0.99em;
+}
+#userOrgs label :first-of-type {
+  margin-bottom: 0.5em;
+}
+#fillOrgs legend {
+  font-size: 1em;
+  color: #595F57;
+}
+#fillOrgs,
+.noOrg-container {
+  font-size: 0.99em;
+}
+input.clinic {
+  margin-top: 6px;
+}
+
+#userSessionReportDetailTable {
+  margin-left: -1%;
+}
+
+#userSessionReportDetailHeader span.glyphicon
+{
+-webkit-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+-moz-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+border-left: 1px solid #ddd;
+border-top: 1px solid #ddd;
+border-radius: 2px;
+padding: 0.2em;
+-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+filter: alpha(opacity=80);
+-moz-opacity: 0.8;
+-khtml-opacity: 0.8;
+opacity: 0.8;
+}
+#userSessionReportDetailHeader span.glyphicon:hover
+{
+  color: #979a8d;
+}
+
+#userSessionReportDetailHeader span.glyphicon-home {
+  top: 5px;
+}
+
+#userSessionReportDetailTable caption {
+  padding: 0;
+}
+
+#userSessionsList {
+  font-size: 0.95em;
+}
+#userSessionsList label {
+  margin-bottom: 6px;
+}
+#userSessionListTable {
+  font-size: 0.98em
+}
+#userSessionListTable TH, table.profile-audit-log TH, #userSessionReportDetailTable TH, .thead {
+  background-color: #979a8d;
+  color: #FFF;
+  padding: 0.25em 0.5em;
+  font-size: 1em;
+  font-weight: normal;
+  font-size: 0.98em;
+}
+#userSessionListTable TR:hover {
+  color: #6C7A72;
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+#userSessionListTable .odd {
+  background-color: #F2F2F2;
+}
+#userSessionListTable .even {
+  background-color: #FFF;
+}
+#userAssessementReport table {
+  word-break: break-all;
+  font-size: 0.95em;
+}
+#termsText {
+  padding: 1.5em 1.8em;
+}
+#agreeLabel {
+  margin-left: 2em;
+}
+
+.profile-header {
+  width: 45%;
+  max-width:100%;
+}
+.profile-section {
+  margin-bottom: 1.5em;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.name-section {
+  margin-bottom: 1.2em;
+}
+.orgLinks {
+  margin-top: 4px;
+}
+
+.profile-audit-log {
+  border-color: #57675B;
+  font-size: 0.87em;
+}
+
+.error-message, .report-error-message {
+  padding: 0.5em;
+  border-radius: 4px;
+  text-align: left;
+}
+
+.report-error-message {
+  color: red;
+  background-color: #f5f5f5;
+  margin-left: 8px;
   display: none;
+  font-size: 1em;
+}
+
+.side {
+  height: 25em;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.flex div {
+  margin: 0.5em 1.2em 0.5em 0.1em;
+}
+.pagination {
+  font-size: 0.93em;
+}
+.pagination-detail {
+  font-size: 0.93em;
+}
+.pagination > .active > a {
+  background-color: #79815D;
+  border-color: #79815D;
+}
+.pagination > .active > a:focus {
+  background-color: #79815D;
+  border-color: #79815D;
+}
+.pagination > .active > a:hover {
+  background-color: #79815D;
+  border-color: #79815D;
+}
+.pagination > .active > span {
+  background-color: #79815D;
+  border-color: #79815D;
+}
+.pagination > .active > span:focus {
+  background-color: #79815D;
+  border-color: #79815D;
+}
+.pagination > .active > span:hover {
+  background-color: #79815D;
+  border-color: #79815D;
+}
+.pagination > li > a {
+  color: #79815D;
+}
+.pagination > li > span {
+  color: #79815D;
+}
+/**override bootstrap style**/
+.checkbox input[type=checkbox],
+.checkbox-inline input[type=checkbox],
+.radio input[type=radio],
+.radio-inline input[type=radio] {
+  margin-top: 6px;
+}
+div.modal-header,
+div.modal-footer {
+  background-color: #627371;
+  color: #FFF;
+}
+div.modal-body {
+  font-size: 0.8em;
+}
+div.modal-footer button {
+  font-size: 0.7em;
+}
+.hide {
+  display: none;
+}
+sub.pointer {
+  cursor:pointer;
+}
+sub.pointer:hover {
+  color: #79815D;
+}
+
+.gradient {
+  background-image:
+    linear-gradient(
+      to top right,
+      #FFF, #e1e2e1
+    );
+}
+
+.report-custom-header {
+  padding: 0.3em 0.5em;
+  border-radius: 4px;
+  border-left: 2px solid #f5f5f5;
+  border-bottom: 2px solid #f5f5f5;
+  width: 100%;
+  max-width: 100%;
+  margin: auto;
+  height: 86px;
+}
+
+.report-custom-header .left {
+float:left;
+}
+
+.report-custom-header .right {
+float:right; padding-top:1%;
+position: relative;
+z-index: 88;
+color: #777
+}
+
+.tooltip > .tooltip-inner {
+    background-color: #979a8d;
+    border: 1px solid #979a8d;
+    padding: 0.3em;
+    width: 150%;
+    font-size: 0.85em;
+}
+
+.tooltip.top > .tooltip-arrow {
+    border-top: 5px solid #979a8d;
+}
+
+/** styles specific to profile **/
+/*.loading-indicator {*/
+#loadingIndicator{
+  /*display: none;*/
   position: fixed;
-  top: 200px;
-  left: 48%;
-  margin-left: -50px;
-  width: 100px;
-  height: 100px;
+  /*top: 200px;
+  left: 48%;*/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  /*margin-left: -50px;*/
+  /*width: 100px;
+  height: 100px;*/
+  font-size: 1em;
   text-align: center;
   z-index: 99999;
   color: #444;
+  margin: auto;
+  /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;*/
 }
+#loadingIndicator:before {
+  content: ' ';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFF; /*for browsers that don't suppor rbga color*/
+  background-color: rgba(0,0,0, 0.15);
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  filter: alpha(opacity=15);
+  -moz-opacity: 0.15;
+  -khtml-opacity: 0.15;
+  opacity: 0.15;
+}
+
+
+#loadingIndicator i {
+  font-size: 1em;
+}
+
+/* :not(:required) hides these rules from IE9 and below */
+#loadingIndicator:not(:required) {
+  /* hide "loading..." text */
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+
+#loadingIndicator:not(:required):after {
+  content: ' ';
+  display: block;
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.5em;
+  -webkit-animation: spinner 1500ms infinite linear;
+  -moz-animation: spinner 1500ms infinite linear;
+  -ms-animation: spinner 1500ms infinite linear;
+  -o-animation: spinner 1500ms infinite linear;
+  animation: spinner 1500ms infinite linear;
+  border-radius: 0.5em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0, rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
+  box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
+}
+
+/* Animation */
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+/**
 .loading {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   filter: alpha(opacity=40);
   -moz-opacity: 0.4;
   -khtml-opacity: 0.4;
   opacity: 0.4;
-}
-/** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
-#mainNav {
-  height: 71px;
-}
-#tnthNavWrapper {
-  display: block;
-  visibility: hidden;
-}
+}**/
+
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
     max-height: 80px;
   }
   #homeFooter {
-    font-size: 14px;
+    font-size: 0.85em;
     padding-top: 0.5em;
   }
   .text-on-img {
@@ -391,6 +826,55 @@ a:active {
   }
   .text-on-img p:last-child {
     margin-bottom: 0;
+  }
+}
+@media (max-width: 640px) {
+  body,
+  .form-control,
+  input,
+  select,
+  h1,h2,h3,h4,h5,
+  label,
+  .tnth-form .form-group > label
+   {
+    font-size: 13px;
+  }
+
+  .fixed-table-pagination {
+    font-size: 0.9em;
+  }
+
+  #phone, #email {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  #userSessionsList {
+    font-size: 0.85em;
+  }
+
+  .side {
+    height: 27em;
+  }
+
+  .form-control {
+    height: 34px;
+    margin: 4px auto;
+  }
+  .checkbox input[type=checkbox],
+  .checkbox-inline input[type=checkbox],
+  .radio input[type=radio],
+  .radio-inline input[type=radio] {
+    margin-top: 2px;
+  }
+  table.profile-audit-log {
+    font-size: 0.7em;
+  }
+
+}
+@media (max-width: 730) {
+  #userSessionsList {
+    font-size: 0.9em;
   }
 }
 @media (min-width: 768px) {
@@ -431,16 +915,22 @@ a:active {
     font-size: 24px;
   }
 }
+@media (max-width: 991px) {
+  .form-control {
+    margin-bottom: 4px;
+  }
+}
+
 @media (min-width: 992px) {
   /** Font sizes changes above 992 **/
   body {
-    font-size: 24px;
+    font-size: 1.8em;
   }
   .tnth-headline {
-    font-size: 28px;
+    font-size: 1.30em;
   }
   .tnth-subhead {
-    font-size: 25px;
+    font-size: 1.2em;
   }
   #fullSizeContainer {
     padding: 30px 0;
@@ -461,7 +951,7 @@ a:active {
     margin-bottom: 1em;
   }
   .tnth-splash .headline {
-    font-size: 32px;
+    font-size: 1.35em;
   }
   .pos-bottom-md {
     position: absolute;
@@ -473,21 +963,26 @@ a:active {
   }
   .form-group input[type=checkbox],
   .form-group input[type=radio] {
-    margin-top: 9px;
+    margin-top: 5px;
   }
   /** Unless explicitly wrapped in reduce-font-sizes class **/
   body .reduce-font-sizes {
     font-size: 18px;
   }
   .reduce-font-sizes .tnth-headline {
-    font-size: 24px;
+    font-size: 1.375em;
   }
   .reduce-font-sizes .tnth-subhead {
-    font-size: 22px;
+    font-size: 1.25em;
   }
   .reduce-font-sizes .form-group input[type=checkbox],
   .reduce-font-sizes .form-group input[type=radio] {
     margin-top: 4px;
+  }
+}
+@media (max-width: 1199px) {
+  .profile-img {
+    display: none;
   }
 }
 @media (min-width: 1200px) {
@@ -507,10 +1002,11 @@ a:active {
     margin: -1em 0 1.5em;
   }
   .profile-img {
-    margin-top: -100px;
+    margin-top: -66px;
+    float:right;
   }
   .profile-img img {
-    width: 120px;
+    width: 60px;
     border-radius: 60px;
   }
   .btn-set {
@@ -749,70 +1245,4 @@ fieldset[disabled] .btn-google.active {
   background-color: #fff;
 }
 
-#profileCreateForm  .title {
-  margin-top: 5%;
-}
-
-#userOrgs {
- font-size:0.9em;
-}
-
-#fillOrgs legend {
-  font-size:0.9em;
-  color: #595F57;
-}
-
-#profileSendEmailContainer {
-  margin-top: 5%;
-  margin-bottom: 6%;
-  padding-bottom: 7%;
-}
-
-#btnProfileSendEmail {
-  margin-top: 5%;
-  font-size: 0.7em;
-}
-
-#profileEmailMessage {
-  font-size: 0.6em;
-  margin-top: 1em;
-  margin-left:0.5em;
-}
-
-#profileIntro a {
-  text-decoration: underline
-}
-
-#userSessionsList, #fillOrgs{
-  font-size: 0.99em;
-}
-
-#userAssessementReport table {
-  word-break:break-all;
-}
-
-.create-user-link {
-  border-radius:4px;
-  color: #29462a;
-  background-color: #FFF;
-  border: 1px solid silver;
-  -webkit-box-shadow: 10px 10px 10px -9px rgba(239,242,239,1);
-  -moz-box-shadow: 10px 10px 10px -9px rgba(239,242,239,1);
-  box-shadow: 10px 10px 10px -9px rgba(239,242,239,1);
-}
-
-.profile-section {
-  margin-bottom: 1.5em;
-}
-.name-section {
-  margin-bottom: 1.2em;
-}
-.orgLinks {
-  margin-top: 4px;
-}
-.error-message {
-  padding: 0.5em;
-  border-radius: 4px;
-  text-align: left;
-}
 
