--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -6,12 +6,17 @@
  * > 992 font sizes: body: 24px, headlines 32px, subheads: 29px, form fields: 18px, buttons: 18px, smaller-text: 14px
 **/
 @baseFontSize:    18px;
-@headlineSize:    24px;
-@subheadSize:     22px;
-@lgFontSize:      24px;
-@lgHeadlineSize:  32px;
-@lgsubheadSize:   29px;
-@smallerText:     14px;
+@headlineSize:    1.25em;
+@subheadSize:     1.20em;
+@lgFontSize:      1.8em;
+@lgHeadlineSize:  1.30em;
+@lgsubheadSize:   1.20em;
+@smallerText:     0.85em;
+@btnSize:         1em;
+@legendSize:      1em;
+@sessionListSize: 0.95em;
+@orgSize:         0.99em;
+
 /**
  * = Colors =
  **/
@@ -19,6 +24,22 @@
 @linkColor:       #57675B;
 @linkHover:       #2a4531;
 @btnColor:        #79815D;
+@legendColor:    #595F57;
+@sectionColor:    rgba(173, 193, 197, 0.16);
+@sectionTitleColor: #575F5C;
+@sectionBorderColor: #E0E6E3;
+@rowBackgroundColor: #7d826e;
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
 
 body {
   margin: 0;
@@ -27,17 +48,43 @@ body {
   color: @baseColor;
   font-size: @baseFontSize;
 }
+
+#mainHolder {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  filter: alpha(opacity=0);
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  opacity: 0;
+  -webkit-transition: visibility 0.5s, opacity 0.3s ease-in;
+  transition: visibility 0.5s, opacity 0.3s ease-in;
+}
+
+/** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
+#mainNav {
+  height: 71px;
+}
+
+#tnthNavWrapper {
+  display: none;
+  visibility: hidden;
+  -webkit-transition: visibility 0.5s ease-in;
+  transition: visibility 0.5s ease-in;
+}
+
 a {
   color: @linkColor;
 }
 a:hover, a:active {
   color: @linkHover;
 }
+
+a.btn {
+  cursor: pointer;
+}
+
 .tnth-hide {
   display: none;
-}
-.btn {
-  font-size: @baseFontSize;
 }
 // Or just set h1?
 .tnth-headline {
@@ -204,11 +251,33 @@ a:hover, a:active {
     width: 100%;
   }
 }
+btn {
+  font-size: @btnSize;
+}
 .btn-set {
   margin-bottom: 1.5em;
   .btn {
     margin-bottom: 0.5em;
   }
+}
+.btn-tnth-primary {
+  color: #fff;
+  background-color: @btnColor;
+  border-color: @btnColor;
+  transition: all 0.3s ease-in-out 0s;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  &:hover,
+  &:focus,
+  &.active,
+  .open > .dropdown-toggle& {
+    color: #fff;
+    background-color: #2a4531;
+    border-color: #1c2f21;
+  }
+}
+.btn-tnth-back {
+  color: #777;
+  padding: 0 5px 0 0;
 }
 .form-control {
   font-size: @baseFontSize;
@@ -270,27 +339,6 @@ a:hover, a:active {
     }
   }
 }
-
-.btn-tnth-primary {
-  color: #fff;
-  background-color: @btnColor;
-  border-color: @btnColor;
-  transition: all 0.3s ease-in-out 0s;
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  &:hover,
-  &:focus,
-  &.active,
-  .open > .dropdown-toggle& {
-    color: #fff;
-    background-color: #2a4531;
-    border-color: #1c2f21;
-  }
-}
-.btn-tnth-back {
-  color: #777;
-  padding: 0 5px 0 0;
-}
-
 .separator-horizontal, .separator-vertical {
   position: relative;
   text-transform: uppercase;
@@ -371,36 +419,450 @@ a:hover, a:active {
   }
 }
 
+.profile-item-container {
+  background-color: #EFF5F3;
+  background-color: @sectionColor;
+  padding: 1.5em 2em;
+  border-radius: 8px;
+  margin: 0.5em auto;
+  border: 1px solid @sectionBorderColor;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  padding: 1em;
+}
 
-/** styles specific to profile **/
-.loading-indicator {
+.profile-item-title {
+  color: @sectionTitleColor;
+  margin-bottom:18px;
+}
+
+.profile-name-label {
+  margin-bottom: 2px
+}
+
+.profile-create-item-container {
+  border-radius: 8px;
+  margin: 0.5em auto;
+  border: 1px solid @sectionBorderColor;
+  padding: 1.5em;
+
+}
+
+#userEthnicity label {
+  margin-bottom: 0
+}
+
+#userRace label {
+  margin-bottom: 0
+}
+
+#genderLabel {
+  margin-bottom: 0
+}
+
+#userOrgs {
+ font-size:@orgSize;
+ label :first-of-type  {
+    margin-bottom: 0.5em;
+ }
+}
+
+#fillOrgs legend {
+  font-size:@legendSize;
+  color: @legendColor;
+}
+
+#fillOrgs, .noOrg-container{
+  font-size: @orgSize;
+}
+
+input.clinic {
+  margin-top:6px;
+}
+
+#userSessionReportDetailTable {
+  margin-left: -1%;
+}
+
+#userSessionReportDetailHeader span.glyphicon
+{
+-webkit-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+-moz-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+border-left: 1px solid #ddd;
+border-top: 1px solid #ddd;
+border-radius: 2px;
+padding: 0.2em;
+-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+filter: alpha(opacity=80);
+-moz-opacity: 0.8;
+-khtml-opacity: 0.8;
+opacity: 0.8;
+}
+#userSessionReportDetailHeader span.glyphicon:hover
+{
+  color: #979a8d;
+}
+
+#userSessionReportDetailHeader span.glyphicon-home {
+  top: 5px;
+}
+t
+#userSessionReportDetailTable caption {
+  padding: 0;
+}
+
+#userSessionsList {
+  font-size: @sessionListSize;
+}
+
+#userSessionsList label {
+  margin-bottom: 6px;
+}
+
+#userSessionListTable {
+  font-size: 0.98em
+}
+
+
+#userSessionListTable TH, table.profile-audit-log TH, .thead {
+  background-color: @rowBackgroundColor;
+  color: #FFF;
+  padding: 0.25em 0.5em;
+  font-size: 1em;
+  font-weight: normal;
+  font-size: 0.98em;
+}
+
+#userSessionListTable TR:hover {
+  color: #6C7A72;
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+#userSessionListTable .odd {
+  background-color: #F2F2F2;
+}
+#userSessionListTable .even {
+  background-color: #FFF;
+}
+
+#userAssessementReport table {
+  word-break:break-all;
+  font-size: 0.94em;
+}
+
+#termsText {
+  padding: 1.5em 2em;
+}
+#agreeLabel {
+  margin-left: 2em;
+}
+
+.profile-header {
+  width:45%;
+  max-width: 100%;
+}
+.profile-section {
+  margin-bottom: 1.5em;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.name-section {
+  margin-bottom: 1.2em;
+}
+.orgLinks {
+  margin-top: 4px;
+}
+
+.profile-audit-log {
+  border-color: #57675B;
+  font-size: 0.87em;
+}
+
+.error-message, .report-error-message {
+  padding: 0.5em;
+  border-radius: 4px;
+  text-align: left;
+}
+
+.report-error-message {
+  color: red;
+  background-color: #f5f5f5;
+  margin-left: 8px;
   display: none;
+  font-size: 1em;
+}
+
+/*.loading-indicator {*/
+#loadingIndicator{
+  /*display: none;*/
   position: fixed;
-  top: 200px;
-  left: 48%;
-  margin-left: -50px;
-  width: 100px;
-  height: 100px;
+  /*top: 200px;
+  left: 48%;*/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  /*margin-left: -50px;*/
+  /*width: 100px;
+  height: 100px;*/
+  font-size: 1em;
   text-align: center;
   z-index: 99999;
   color: #444;
+  margin: auto;
+  /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;*/
 }
+#loadingIndicator:before {
+  content: ' ';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFF; /* for browsers that don't support rgba color*/
+  background-color: rgba(0,0,0, 0.15);
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  filter: alpha(opacity=60);
+  -moz-opacity: 0.6;
+  -khtml-opacity: 0.6;
+  opacity: 0.6;
+}
+
+
+#loadingIndicator i {
+  font-size: 1em;
+}
+
+/* :not(:required) hides these rules from IE9 and below */
+#loadingIndicator:not(:required) {
+  /* hide "loading..." text */
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+
+#loadingIndicator:not(:required):after {
+  content: ' ';
+  display: block;
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.5em;
+  -webkit-animation: spinner 1500ms infinite linear;
+  -moz-animation: spinner 1500ms infinite linear;
+  -ms-animation: spinner 1500ms infinite linear;
+  -o-animation: spinner 1500ms infinite linear;
+  animation: spinner 1500ms infinite linear;
+  border-radius: 0.5em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0, rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
+  box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
+}
+
+/* Animation */
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+/*********
 .loading {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
   filter: alpha(opacity=40);
   -moz-opacity: 0.4;
   -khtml-opacity: 0.4;
   opacity: 0.4;
+}*********/
+
+.side {
+  height:25em
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.flex div {
+  margin: 0.5em 1.2em 0.5em 0.1em;
 }
 
-/** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
-#mainNav {
-  height: 71px;
+.pagination {
+  font-size: 0.93em;
 }
-// Hide the actual div that holds nav. This is to avoid flash of unstyled content. .show() on load of nav.
-#tnthNavWrapper {
+.pagination-detail {
+  font-size: 0.93em;
+}
+
+.pagination {
+
+  >.active>a {
+    background-color: @btnColor;
+    border-color: @btnColor;
+  }
+  >.active>a:focus {
+    background-color: @btnColor;
+    border-color: @btnColor;
+  }
+  >.active>a:hover{
+    background-color: @btnColor;
+    border-color: @btnColor;
+  }
+  >.active>span{
+    background-color: @btnColor;
+    border-color: @btnColor;
+  }
+  >.active>span:focus{
+    background-color: @btnColor;
+    border-color: @btnColor;
+  }
+  >.active>span:hover {
+    background-color: @btnColor;
+    border-color: @btnColor;
+  }
+}
+
+.pagination {
+  >li>a {
+    color: @btnColor;
+  }
+  >li>span {
+    color: @btnColor;
+  }
+}
+
+/**override bootstrap style**/
+.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
+  margin-top:6px;
+}
+
+div.modal-header, div.modal-footer {
+  background-color: @btnColor;
+  color: #FFF;
+}
+
+.hide {
   display: none;
 }
+sub.pointer {
+  cursor:pointer;
+}
+sub.pointer:hover {
+  color: #79815D;
+}
+
+.gradient {
+  background-image:
+    linear-gradient(
+      to top right,
+      #FFF, #e1e2e1
+    );
+}
+
+.report-custom-header {
+  padding: 0.3em 0.5em;
+  border-radius: 4px;
+  border-left: 2px solid #f5f5f5;
+  border-bottom: 2px solid #f5f5f5;
+  width: 100%;
+  max-width: 100%;
+  margin: auto;
+  height: 86px;
+}
+
+.report-custom-header .left {
+float:left;
+}
+
+.report-custom-header .right {
+float:right; padding-top:1%;
+position: relative;
+z-index: 88;
+color: #777
+}
+
+.tooltip > .tooltip-inner {
+    background-color: #979a8d;
+    border: 1px solid #979a8d;
+    padding: 0.3em;
+    width: 150%;
+    font-size: 0.85em;
+}
+
+.tooltip.top > .tooltip-arrow {
+    border-top: 5px solid #979a8d; ;
+}
+
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -421,6 +883,62 @@ a:hover, a:active {
     }
   }
 }
+
+@media (max-width: 640px) {
+  body,
+  .form-control,
+  input,
+  select,
+  h1, h2, h3, h4, h5,
+  label,
+  .tnth-form .form-group > label {
+    font-size: 13px;
+  }
+
+  .fixed-table-pagination {
+    font-size:0.9em;
+  }
+
+  #userSessionsList {
+    font-size: 0.85em;
+  }
+
+  .side {
+    height: 27em;
+  }
+
+  #phone, #email {
+    width: 100%;
+    max-width: 100%
+  }
+
+  .form-control {
+    height: 34px;
+    margin: 4px auto;
+  }
+  .checkbox input[type=checkbox],
+  .checkbox-inline input[type=checkbox],
+  .radio input[type=radio],
+  .radio-inline input[type=radio] {
+    margin-top: 2px;
+  }
+  table.profile-audit-log {
+    font-size: 0.7em;
+  }
+  .create-account-container {
+    padding: 3.5em 3em;
+    width: 90%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 730) {
+  #userSessionsList {
+    font-size: 0.9em;
+  }
+}
+
+
 @media (min-width: 768px) {
   #mainNav {
     height: 135px;
@@ -459,6 +977,11 @@ a:hover, a:active {
   }
   .tnth-splash-bottom-link {
     font-size: 24px;
+  }
+}
+@media (max-width: 991px) {
+  .form-control {
+    margin-bottom: 4px;
   }
 }
 @media (min-width: 992px) {
@@ -521,6 +1044,12 @@ a:hover, a:active {
     .form-group input[type=checkbox], .form-group  input[type=radio] {
       margin-top: 4px;
     }
+  }
+}
+
+@media (max-width: 1199px) {
+  .profile-img {
+    display: none;
   }
 }
 @media (min-width: 1200px) {
