--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1481,8 +1481,16 @@ div.noOrg-container {
   .title {
     margin-top: 5%;
   }
-  #phoneGroup {
-    margin-top: 1em;
+  #phoneGroup,
+  #userRole,
+  #userOrgs {
+    margin-top: 1.4em;
+  }
+  #emailGroup {
+    margin-top: 0
+  }
+  #userRole .checkbox:first-of-type {
+    margin-top: 0;
   }
   #studyIdContainer {
     margin-top: 1.8em;
